# torchbridge

./: .env.example  .gitignore  .pre-commit-config.yaml  API.md  BENCHMARKS.md  BUILD.md  CHANGELOG.md  CLAUDE.md  CLEANUP_SUMMARY_v0.2.0.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION_SYNC_REPORT.md  IMPLEMENTATION_ROADMAP.md  LICENSE  Makefile  OPTIMIZATION_ROADMAP_2025_2026.md  POST_PULL_VALIDATION_v0.3.1.md  QUALITY_STANDARDS.md  README.md  README_REFOCUSED.md  REFOCUS_PLAN.md  REPOSITORY_STRUCTURE.md  SECURITY.md  TESTING_STRATEGY.md  TESTING_v0.3.1.md  TPU_BACKEND_ANALYSIS_v0.3.2.md  VALIDATION_REPORT_v0.3.1.md  cli_benchmark_results.json  codecov.yml  demo_compiler_optimization.py  demo_gpu_optimization_testing.py  demo_profiling.py  demo_progressive_optimization.py  demo_semantic_agent.py  demo_semantic_models.py  interactive_semantic_demo.py  pyproject.toml  pytest.ini  quick_compiler_demo.py  requirements.txt  (+6 more)
.githooks/: README.md  commit-msg
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github-workflows-backup/: README.md  ci.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  performance_issue.yml
.github/workflows/: amd-gpu-test.yml  benchmark.yml  bert-squad-validation.yml  ci.yml  docker.yml  intel-gpu-test.yml  release.yml  security.yml
benchmarks/: README.md  __init__.py  amd_integration_benchmark.py  amd_optimization_benchmark.py  attention_efficiency.py  backend_comparison.py  backend_comparison_benchmark.py  cli_performance_benchmark.py  custom_kernel_benchmark.py  dynamic_shapes_benchmark.py  hardware_abstraction_benchmark.py  intel_benchmark.py  nvidia_config_benchmarks.py  nvidia_integration_benchmark.py  quantization_accuracy.py  quick_benchmark.py  regression_benchmark.py  run_comprehensive_benchmark.py  simple_benchmark_test.py  tpu_integration_benchmark.py  unified_runner.py
benchmarks/analysis/: __init__.py  results_analyzer.py
benchmarks/configs/: benchmark_configs.yaml
benchmarks/framework/: __init__.py  analysis_engine.py  baseline_implementations.py  benchmark_runner.py  metrics_collector.py  timing_utils.py
benchmarks/models/: small_model_benchmark.py
benchmarks/next_gen/: README.md  __init__.py  cutting_edge_baselines.py  demo_cutting_edge_benchmark.py  enhanced_benchmark_runner.py
benchmarks/regression/: __init__.py  baseline_manager.py  historical_analyzer.py  regression_detector.py  threshold_manager.py
demos/: 01_basic_optimizations.py  02_advanced_attention.py  03_fp8_training.py  05_production_deployment.py  README.md  amd_backend_demo.py  auto_optimization_demo.py  custom_kernel_demo.py  flex_attention_demo.py  fp8_native_demo.py  intel_xpu_demo.py  moe_demo.py  nvidia_configuration_demo.py  nvidia_integration_demo.py  performance_regression_demo.py  production_pipeline_demo.py  run_all_demos.py  tpu_integration_demo.py  unified_backend_demo.py
demos/01_getting_started/: basic_optimizations_demo.py  optimized_basic_demo.py
demos/02_compiler_optimizations/: demo_compiler_optimization.py  demo_priority1_compiler_integration.py  dynamic_shapes_demo.py  flashlight_demo.py  optimized_compiler_demo.py  optimized_flashlight_demo.py
demos/03_advanced_attention/: neural_operator_fusion_demo.py  ring_attention_demo.py  sparse_attention_demo.py
demos/04_gpu_integration/: cuda_graphs_demo.py
demos/05_next_generation/: README.md  (+4 more)
docker/: Dockerfile.amd  Dockerfile.cpu  Dockerfile.development  Dockerfile.intel  Dockerfile.nvidia  Dockerfile.production  Dockerfile.serving  docker-compose.yml  entrypoint.sh  prometheus.yml
docs/: EDUCATIONAL_SUMMARY.md  EXTERNAL_REFERENCES.md  INDUSTRY_LANDSCAPE_2026.md  NEXT_STEPS.md  QUICKSTART_REAL_MODELS.md  README.md  REFACTORING_PLAN.md  REPORTS_POLICY.md  SETUP_GUIDE.md  TECHNICAL_OVERVIEW.md  advanced_optimizations_guide.md  architecture.md  cli_reference.md  cloud_testing_guide.md  cloud_testing_v046.md  comprehensive_learning_guide.md  cuda_setup.md  dynamic_shape_bucketing.md  hardware.md  immediate_tasks.md  implementation_guide.md  overview.md  performance.md  performance_regression_testing_plan.md  quickstart.md  references.md  research_roadmap.md  roadmap.md  setup.md  structure.md  test_optimization_guide.md  unified_roadmap.md
examples/: advanced_optimizations_demo.py  usecase1_export_pipeline.py  usecase2_llm_optimization.py  usecase3_cicd_validation.py  usecase4_backend_agnostic_training.py  usecase5_cross_backend_validation.py
scripts/: __init__.py  benchmark_suite.py  check_changelog_updated.py  check_doc_links.py  check_docs_updated.py  check_documentation_policy.py  check_version_consistency.py  cleanup_deadcode.py  cleanup_repo.py  cloud_validation.sh  cross_backend_benchmark_report.py  deadcode_analyzer.py  detailed_deadcode_report.py  generate_benchmark_report.py  install-hooks.sh  install_hooks.sh  profile_tests.py  run_tests.py  sync_doc_versions.py  test_all_changes.py  test_nvidia_integration.py  validate_gpu_setup.py
templates/: README.md
test_results/: integration_test_report_1763849474.json  integration_test_report_1763849705.json  integration_test_report_1763849914.json  integration_test_report_1763851275.json  integration_test_report_1763934111.json
tests/: README.md  conftest.py  test_advanced.py  test_advanced_memory.py  test_advanced_optimizations.py  test_amd_backend.py  test_attention_compatibility.py  test_backend_integration.py  test_compiler.py  test_configs.py  test_deployment.py  test_distributed_scale.py  test_dynamic_shapes.py  test_fp8_native.py  test_fp8_training.py  test_hardware_abstraction.py  test_integration.py  test_intel_backend.py  test_kernel_integration.py  test_monitoring.py  test_multimodal_integration.py  test_neural_operator_fusion.py  test_next_gen.py  test_next_gen_benchmarks.py  test_next_gen_optimizations.py  test_nextgen.py  test_nvidia_backend.py  test_nvidia_config.py  test_package_installation.py  test_priority1_compiler_integration.py  test_serving.py  test_testing_framework.py  test_tpu_backend.py  test_ultra_precision.py
tools/: profile_tests.py  test_all_changes.py
(+731 files in other folders)
