[build-system]
requires = ["setuptools>=61.0", "wheel", "pybind11>=2.10.0", "torch", "ninja"]
build-backend = "setuptools.build_meta"

[project]
name = "kernel-pytorch"
version = "0.1.65"
description = "Production-grade PyTorch GPU optimization framework with 2-5x performance improvements"
authors = [{name = "KernelPyTorch Team"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["pytorch", "gpu", "optimization", "cuda", "triton", "machine-learning", "deep-learning", "performance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Hardware :: Universal Serial Bus (USB) :: Graphics Processing Unit (GPU)",
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "pybind11>=2.10.0",
]

[project.urls]
Homepage = "https://github.com/KernelPyTorch/kernel-pytorch"
Documentation = "https://kernel-pytorch.readthedocs.io"
Repository = "https://github.com/KernelPyTorch/kernel-pytorch"
"Bug Tracker" = "https://github.com/KernelPyTorch/kernel-pytorch/issues"

[project.scripts]
kernelpytorch = "kernel_pytorch.cli:main"
kpt-optimize = "kernel_pytorch.cli.optimize:main"
kpt-benchmark = "kernel_pytorch.cli.benchmark:main"
kpt-doctor = "kernel_pytorch.cli.doctor:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "jupyter>=1.0.0",
    "tensorboard>=2.9.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
all = [
    "transformers>=4.35.0",
    "datasets>=2.14.0",
    "tokenizers>=0.14.0",
    "triton>=2.1.0",
    "flash-attn>=2.3.0",
    "accelerate>=0.24.0",
]
cloud = [
    "boto3>=1.28.0",
    "google-cloud-storage>=2.10.0",
    "azure-storage-blob>=12.17.0",
    "kubernetes>=27.2.0",
]
serving = [
    "fastapi>=0.103.0",
    "uvicorn[standard]>=0.23.0",
    "torchserve>=0.8.0",
    "gradio>=3.45.0",
    "streamlit>=1.27.0",
]
monitoring = [
    "prometheus-client>=0.17.0",
    "wandb>=0.16.0",
    "tensorboard>=2.14.0",
    "mlflow>=2.7.0",
    "optuna>=3.4.0",
]
benchmark = [
    "memory-profiler>=0.61.0",
    "py-spy>=0.3.14",
    "torch-tb-profiler>=0.4.0",
    "psutil>=5.9.0",
    "gpustat>=1.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"